# baby-wgpu

./: Cargo.toml  README.md  desktop.ps1  desktop.sh  index.html  web.ps1  web.sh
icons/: icon.xcf
src/: apparat.rs  icon.rs  lib.rs  main.rs  pipelines.rs  shader.wgsl  smoothstep.wgsl
