[package]
name = "baby-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
image = "0.24.7"
tracing = { version = "0.1.37", features = ["max_level_trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] } # only in main
wgpu = "0.17.0"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-browser-subscriber = "0.2.0"
wasm-bindgen = "0.2.87"
#wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Document", "Element", "Window"] }
wgpu = { version = "0.17.0", features = ["webgl"] }
